--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,6 +14,14 @@ main .mainContent {
 main .mainContent h2{
     margin-bottom: 2%;
     font-size: 2.2em;
+
+    transition: 0.3s ease-in-out;
+}
+main .mainContent h2:hover{
+    margin-bottom: 2%;
+    font-size: 3.0em;
+    color: var(--blue);
+    cursor: pointer;
 }
 main .mainContent .text p{
     width: 75%;
@@ -33,11 +41,12 @@ main .cardContainer .card img {
     padding: 10px;
     border-radius: 10px;
 
-    transition: box-shadow 0.25s ease-in-out ;
+    transition: 0.3s ease-in-out ;
 
 }
 
 main .cardContainer .card img:hover{
-
+    height: 130px;
+    width: 130px;
     box-shadow: 0px 0px 8px var(--blue);
 }
