--- a/CSS/main.css
+++ b/CSS/main.css
@@ -27,19 +27,23 @@ main .mainContent .text p{
     width: 75%;
     font-size: 1.2em;
     font-weight: 300;
-
+    line-height: 1.6;
 }
-/*CARDS CONTENT*/
+
 main .cardContainer .card {
     display: inline;
     align-items: center;  
+    border: none;
 
 }
 main .cardContainer .card img {
     width: 120px;
     height: 120px;
     padding: 10px;
+   
     border-radius: 10px;
+    margin-right: 0.8em;
+    margin-left: 0.8em;
 
     transition: 0.3s ease-in-out ;
 
