--- a/CSS/main.css
+++ b/CSS/main.css
@@ -23,13 +23,38 @@ main .mainContent h2:hover{
     color: var(--blue);
     cursor: pointer;
 }
+main .mainContent img {
+    width: 20em;
+    height: 20em;
+
+    border-radius: 100em;
+
+    transition: 0.3s ease-in-out;
+}
+
+main .mainContent img:hover {
+    height: 20.1em;
+    width: 20.1em;
+    
+    box-shadow: 0px 0px 8px var(--blue);
+    cursor: pointer;
+}
+.nameImg{
+    padding-top: 0.5em;
+}
+
 main .mainContent .text p{
     width: 75%;
     font-size: 1.2em;
     font-weight: 300;
     line-height: 1.6;
 }
-
+main .flexContainer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+/*CARD CONTENT*/
 main .cardContainer .card {
     display: inline;
     align-items: center;  
