--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -23,6 +23,23 @@
     main .tecnologias .cardContainer, .mainContent .text p {
         margin-top: 32px;
     }
+    main .photoContainer img {
+        width: 10em;
+        height: 10em;
+    }
+    main .mainContent h2{
+        font-size: 1.5em;
+    }
+    main .mainContent h2:hover{
+        margin-bottom: 2%;
+        font-size: 1.7em;
+        color: var(--blue);
+        cursor: pointer;
+    }
+    main .photoContainer img:hover {
+        width: 11em;
+        height: 11em;
+    }
 }
 @media (max-width: 700px){
     header{
@@ -41,5 +58,22 @@
     }
     header nav a {
         font-size: 1em;
+    }
+    main .flexContainer {
+        display: flex;
+        flex-direction: column;
+    }
+    main .mainContent h2{
+        font-size: 1.1em;
+    }
+    main .mainContent h2:hover{
+        margin-bottom: 2%;
+        font-size: 1.2em;
+        color: var(--blue);
+        cursor: pointer;
+    }
+    main .photoContainer img:hover {
+        width: 11em;
+        height: 11em;
     }
 }
